added replay button, displaycontroller function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <div id="wrapper">
       <header>Tic Tac Toe</header>
       <div id="game-container"></div>
+      <div id="replay">
+        <button type="button" id="replay-button">Replay</button>
+      </div>
     </div>
   </body>
 </html>
