added replay logic styled board with red and completed win logic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <header>Tic Tac Toe</header>
+      <header>Tic <span id="tac">Tac</span> Toe</header>
       <div id="game-container"></div>
       <div id="outcome"></div>
       <div id="replay">
